RESOLVED FIXED111456
[WK2] Crashes creating WebKit processes in WKSandboxExtensionConsume
https://bugs.webkit.org/show_bug.cgi?id=111456
Summary [WK2] Crashes creating WebKit processes in WKSandboxExtensionConsume
Alexey Proskuryakov
Reported 2013-03-05 11:02:48 PST
When extension creation fails, we are likely to crash in SandboxExtension::consumePermanently(). That's too late to diagnose, and also, other SandboxExtension functions handle this situation more gracefully.
Attachments
proposed fix (2.82 KB, patch)
2013-03-05 11:10 PST, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2013-03-05 11:10:33 PST
Created attachment 191514 [details] proposed fix
Alexey Proskuryakov
Comment 2 2013-03-05 11:19:39 PST
Alexey Proskuryakov
Comment 3 2013-03-05 11:26:05 PST
Note You need to log in before you can comment on or make changes to this bug.